# Oxidoro-Timer

./: Cargo.toml  README.md  index.html
src/: main.rs  old_main.rs  timer_util.rs  ui_util.rs  web_main.rs
ui/: appwindow.slint  timer.slint
