[package]
name = "oxidoro-timer"
version = "0.1.0"
authors = ["Joren Larm <jedilarm@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
rodio = "0.18.1"
slint = "1.6"
timer = "0.2.0"

[build-dependencies]
slint-build = "1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
